fix: Add check for optional dimOauth2Client